--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
     <script src="https://kit.fontawesome.com/8d10a078fa.js" crossorigin="anonymous"></script>
     <script>
         $(function () {
-
             $(".navbar_toggleBtn").on("click", function () {
-                if ($(".navbar_menu").css("display") == "none" && $(".navbar_icons").css("display") == "none") {
-                    $(".navbar_menu").css("display", "flex");
+                if ($(".navbar_menu").css("display") == "none") {
+                    $(".navbar_menu").slideDown(500, function () {
+                        $(".navbar_menu").css("display", "flex");
+                    });
                     $(".navbar_icons").css("display", "flex");
-                } else {
-                    $(".navbar_menu").toggle();
-                    $(".navbar_icons").toggle();
-                }
-            })
 
+                } else {
+                    $(".navbar_menu").slideUp(500, function () {
+                        $(".navbar_menu").css("display", "none");
+                    });
+                    $(".navbar_icons").css("display", "none");
+                }
+            });
 
             $("#to-top").on("click", function () {
                 $("html, body").animate({
@@ -41,19 +44,25 @@
                 }, 500);
             });
 
-            
-
-            
-            $(this).click(function () {
-                var x = $(this).attr("href");
-                $("html, body").animate({
-                    scrollTop:$(x).offset().top
-                });
+            $(".navbar_menu gt(0)").click(function (e) {
+                e.preventDefault();
+                var scrollPosition = $($(this).attr("href")).offset().top;
+                $("html, body").stop().animate({
+                    scrollTop: scrollPosition
+                }, 700);
             });
 
-
-
         });
+        function copyEmailAdd() {
+            var copyText = document.createElement("textarea");
+            document.body.appendChild(copyText);
+            copyText.value = 'demd4784@gmail.com';
+            copyText.select();
+            document.execCommand('copy');
+            document.body.removeChild(copyText);
+            alert(copyText.value + '\n복사되었습니다. 감사합니다!');
+        }
+
     </script>
 </head>
 
@@ -61,8 +70,8 @@
     <header>
         <nav class="navbar">
             <div class="navbar_logo">
-                <i class="fas fa-blog"></i>
-                <a href="#"></a>
+                <a href="https://github.com/demd7362/portfolio"><i class="fa-solid fa-right-to-bracket"
+                        title="포트폴리오 리포지토리로 이동합니다."></i></a>
             </div>
             <ul class="navbar_menu">
 
@@ -74,12 +83,12 @@
             <ul class="navbar_icons">
                 <li>
                     <a href="https://github.com/demd7362">
-                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-github" title="저의 Git으로 이동합니다."></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="fa-regular fa-user"></i>
+                    <a href="#" onclick="copyEmailAdd();">
+                        <i class="fa-solid fa-envelope" title="저의 이메일 주소를 클립보드에 복사합니다."></i>
                     </a>
                 </li>
             </ul>
