--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>정지훈 포트폴리오</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -83,12 +83,12 @@
             <ul class="navbar_icons">
                 <li>
                     <a href="https://github.com/demd7362">
-                        <i class="fa-brands fa-github" title="저의 Git으로 이동합니다."></i>
+                        <i class="fa-brands fa-github" title="면접자의 Git으로 이동합니다."></i>
                     </a>
                 </li>
                 <li>
                     <a href="#" onclick="copyEmailAdd();">
-                        <i class="fa-solid fa-envelope" title="저의 이메일 주소를 클립보드에 복사합니다."></i>
+                        <i class="fa-solid fa-envelope" title="면접자의 이메일 주소를 클립보드에 복사합니다."></i>
                     </a>
                 </li>
             </ul>
